fix(database): corrigir tabela produto e usuario